Refactor. Introduce ANTLR grammar and quantifier rewrite visitor.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 target/
 processed_regexlib.txt
-src/main/resources/.antlr/
-src/main/resources/*.interp
-src/main/resources/*.tokens
-src/main/resources/SimpleRegexpLexer.java
-src/main/resources/SimpleRegexpListener.java
-src/main/resources/SimpleRegexpParser.java
-src/main/resources/SimpleRegexpBaseListener.java
+src/main/java/regexlang/.antlr/
+src/main/java/regexlang/*.interp
+src/main/java/regexlang/*.tokens
+src/main/java/regexlang/SimpleRegexpLexer.java
+src/main/java/regexlang/SimpleRegexpListener.java
+src/main/java/regexlang/SimpleRegexpParser.java
+src/main/java/regexlang/SimpleRegexpBaseListener.java
+src/main/java/regexlang/SimpleRegexpBaseVisitor.java
+src/main/java/regexlang/SimpleRegexpVisitor.java
