--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>nca</groupId>
-  <artifactId>nca</artifactId>
+  <groupId>regexps-with-counters</groupId>
+  <artifactId>regexps-with-counters</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>nca</name>
+  <name>regexps-with-counters</name>
   <url>https://github.com/river-martin/regexps-with-counters</url>
 
   <properties>
@@ -30,12 +30,6 @@
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
-    <dependency>
-      <groupId>org.antlr</groupId>
-      <artifactId>antlr4-runtime</artifactId>
-      <version>4.13.2</version>
-    </dependency>
     <!--https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
     <dependency>
       <groupId>org.antlr</groupId>
@@ -43,7 +37,7 @@
       <version>4.13.2</version>
     </dependency>
   </dependencies>
-
+  
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (can be moved to
       parent pom) -->
